# navier-stokes-verifier-scaffold

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: CANDIDATE_GENERATION_SPEC_V4.md  FINAL_CANDIDATE_TRIAGE.md  KNOWN_CRITICAL_SPACE_CRITERIA.md  KNOWN_ENERGY_FLUX_CRITERIA.md  KNOWN_LOCAL_ENSTROPHY_CRITERIA.md  LEMMA_0251_FLUX_BALANCE_AUDIT.md  LEMMA_0252_LOCAL_ENERGY_FORMAL_MAP.md  LEMMA_0252_PROOF_OBLIGATIONS.md  STATUS.md  STEP137_TAO2013_STAGE1_TECHNIQUE_CARD.md  STEP138_TAO2013_STAGE1_EXIT_VALUE_ASSESSMENT.md  SUMMARY.md
docs/definitions/: round3_selected_definitions.md
logs/: step49_local_enstrophy_registry_20260519.md  step50_energy_flux_registry_20260519.md  step51_flux_balance_audit_20260519.md  step52_flux_balance_risk_evaluator_20260519.md  step53_parabolic_morrey_obligations_20260519.md  step54_parabolic_morrey_evaluator_20260519.md  step55_duhamel_formal_only_evaluator_20260519.md
scripts/: verify_public.sh
tests/: test_evaluator.py  test_generation_spec_v4.py  test_initial_conditions.py  test_interval_falsifier.py  test_solver_taylor_green.py  test_tao_averaged.py
track-a-regularity/candidates/: lemma_0001.yaml  lemma_0002.yaml  lemma_0003.yaml  lemma_0004.yaml  lemma_0005.yaml  lemma_0006.yaml  lemma_0007.yaml  lemma_0008.yaml  lemma_0009.yaml  lemma_0010.yaml  lemma_0011.yaml  lemma_0012.yaml  lemma_0013.yaml  lemma_0014.yaml  lemma_0015.yaml  lemma_0016.yaml  lemma_0017.yaml  lemma_0018.yaml  lemma_0019.yaml  lemma_0020.yaml  lemma_0021.yaml  lemma_0022.yaml  lemma_0023.yaml  lemma_0024.yaml  lemma_0025.yaml  (+227 more)
(+119 files in other folders)
