[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "navier-stokes-verifier-scaffold"
version = "0.1.0"
description = "Verifier-first research scaffold for AI-assisted Navier-Stokes experiments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Navier-Stokes Verifier Scaffold Contributors" }]
dependencies = [
  "numpy>=1.26",
  "mpmath>=1.3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
plots = [
  "matplotlib>=3.8",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "track-a-regularity/evaluator",
  "track-b-blowup/solver",
]
addopts = "-q"
